almost 200M but cali there

--- a/altered-states-2/main.ipynb
+++ b/altered-states-2/main.ipynb
@@ -341,14 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "163,966,295\n"
+      "154,686,552\n"
      ]
     },
     {
@@ -370,16 +370,15 @@
        "  'maine',\n",
        "  'montana',\n",
        "  'nevada',\n",
-       "  'newjersey',\n",
        "  'newyork',\n",
        "  'ohio',\n",
        "  'oregon',\n",
        "  'texas',\n",
        "  'utah'},\n",
-       " 21)"
+       " 20)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,10 +393,10 @@
     "score1, states1 = get_score(grid)\n",
     "        \n",
     "grid = [['p', 'd', 's', 'm', 'a'],\n",
-    "        ['e', 'a', 'i', 'l', 'k'],\n",
-    "        ['a', 'n', 'o', 'r', 'a'],\n",
-    "        ['t', 'e', 'e', 'y', 's'],\n",
-    "        ['u', 'g', 'w', 'm', 'e']]\n",
+    "        ['e', 'a', 'i', 'r', 'k'],\n",
+    "        ['a', 'n', 'o', 'l', 'a'],\n",
+    "        ['t', 'e', 'e', 'r', 's'],\n",
+    "        ['u', 'g', 'w', 'm', 'y']]\n",
     "\n",
     "score, states = get_score(grid)\n",
     "print(f'{score:,}'), states, len(states)"
@@ -405,19 +404,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'arizona', 'montana', 'indiana', 'louisiana', 'newjersey', 'oregon', 'illinois', 'nevada', 'maine'} set()\n"
+      "{'oregon', 'newjersey'} set()\n"
      ]
     }
    ],
    "source": [
     "print(states1 - states, states - states1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90,346,622\n",
+      "96,130,930\n",
+      "110,501,555\n",
+      "116,285,863\n",
+      "121,227,355\n",
+      "127,011,663\n",
+      "150,445,008\n",
+      "156,229,316\n",
+      "158,346,882\n",
+      "160,470,860\n",
+      "166,686,493\n",
+      "199,970,598\n",
+      "this is it\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = [['p', 'd', 's', 'm', 'a'],\n",
+    "        ['e', 'a', 'i', 'r', 'k'],\n",
+    "        ['a', 'n', 'o', 'l', 'a'],\n",
+    "        ['t', 'e', 'e', 'r', 's'],\n",
+    "        ['u', 'g', 'w', 'm', 'y']]\n",
+    "\n",
+    "row = 3\n",
+    "max_score = 0\n",
+    "max_grid = None\n",
+    "for a in range(24):\n",
+    "    c1 = chr(ord('a') + a)\n",
+    "    for c2 in range(26):\n",
+    "        c2 = chr(ord('a') + c2)\n",
+    "        for c3 in range(26):\n",
+    "            c3 = chr(ord('a') + c3)\n",
+    "            grid[row] = ['t', c1, c2, c3, 's']\n",
+    "            score, states = get_score(grid)\n",
+    "            \n",
+    "            if score > max_score:\n",
+    "                max_score = score\n",
+    "                max_grid = grid.copy()\n",
+    "                print(f'{score:,}'), states, len(states), c1, c2, c3\n",
+    "                \n",
+    "    if max_score == 199970598:\n",
+    "        print('this is it')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "199970598"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199,970,598\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None,\n",
+       " {'alabama',\n",
+       "  'alaska',\n",
+       "  'arizona',\n",
+       "  'arkansas',\n",
+       "  'california',\n",
+       "  'colorado',\n",
+       "  'florida',\n",
+       "  'georgia',\n",
+       "  'idaho',\n",
+       "  'illinois',\n",
+       "  'indiana',\n",
+       "  'iowa',\n",
+       "  'kansas',\n",
+       "  'louisiana',\n",
+       "  'maine',\n",
+       "  'montana',\n",
+       "  'nevada',\n",
+       "  'newyork',\n",
+       "  'ohio',\n",
+       "  'oregon',\n",
+       "  'texas',\n",
+       "  'utah'},\n",
+       " 22)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_grid = [['p', 'd', 's', 'm', 'a'],\n",
+    "            ['e', 'a', 'i', 'r', 'k'],\n",
+    "            ['a', 'n', 'o', 'l', 'a'],\n",
+    "            ['t', 'e', 'r', 'c', 's'],\n",
+    "            ['u', 'g', 'w', 'm', 'y']]\n",
+    "\n",
+    "score, states = get_score(max_grid)\n",
+    "\n",
+    "print(f'{score:,}'), states, len(states)"
    ]
   },
   {
