crossed 200M, trying to get 4C

--- a/altered-states-2/main.ipynb
+++ b/altered-states-2/main.ipynb
@@ -47,46 +47,46 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>NAME</th>\n",
-       "      <th>POPESTIMATE2020</th>\n",
+       "      <th>POPULATION</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>alabama</td>\n",
-       "      <td>5024803</td>\n",
+       "      <td>5024279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>alaska</td>\n",
-       "      <td>732441</td>\n",
+       "      <td>733391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>arizona</td>\n",
-       "      <td>7177986</td>\n",
+       "      <td>7151502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>arkansas</td>\n",
-       "      <td>3012232</td>\n",
+       "      <td>3011524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>california</td>\n",
-       "      <td>39499738</td>\n",
+       "      <td>39538223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         NAME  POPESTIMATE2020\n",
-       "0     alabama          5024803\n",
-       "1      alaska           732441\n",
-       "2     arizona          7177986\n",
-       "3    arkansas          3012232\n",
-       "4  california         39499738"
+       "         NAME  POPULATION\n",
+       "0     alabama     5024279\n",
+       "1      alaska      733391\n",
+       "2     arizona     7151502\n",
+       "3    arkansas     3011524\n",
+       "4  california    39538223"
       ]
      },
      "execution_count": 3,
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_dict = {state: pop for state, pop in zip(state_pops['NAME'], state_pops['POPESTIMATE2020'])}\n",
+    "pop_dict = {state: pop for state, pop in zip(state_pops['NAME'], state_pops['POPULATION'])}\n",
     "del state_pops"
    ]
   },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('california', 39499738), ('texas', 29217653), ('florida', 21569932), ('newyork', 20154933), ('pennsylvania', 12989625), ('illinois', 12785245), ('ohio', 11790587), ('georgia', 10725800), ('northcarolina', 10457177), ('michigan', 10067664), ('newjersey', 9279743), ('virginia', 8632044), ('washington', 7718785), ('arizona', 7177986), ('massachusetts', 7022220), ('tennessee', 6920119), ('indiana', 6785644), ('maryland', 6172679), ('missouri', 6154481), ('wisconsin', 5892323), ('colorado', 5784308), ('minnesota', 5707165), ('southcarolina', 5130729), ('alabama', 5024803), ('louisiana', 4651203), ('kentucky', 4503958), ('oregon', 4241544), ('oklahoma', 3962031), ('connecticut', 3600260), ('utah', 3281684), ('iowa', 3188669), ('nevada', 3114071), ('arkansas', 3012232), ('mississippi', 2956870), ('kansas', 2935880), ('newmexico', 2117566), ('nebraska', 1961455), ('idaho', 1847772), ('westvirginia', 1789798), ('hawaii', 1451911), ('newhampshire', 1377848), ('maine', 1362280), ('rhodeisland', 1096229), ('montana', 1086193), ('delaware', 991886), ('southdakota', 887099), ('northdakota', 778962), ('alaska', 732441), ('vermont', 642495), ('wyoming', 577267)]\n"
+      "[('california', 39538223), ('texas', 29145505), ('florida', 21538187), ('newyork', 20201249), ('pennsylvania', 13002700), ('illinois', 12812508), ('ohio', 11799448), ('georgia', 10711908), ('northcarolina', 10439388), ('michigan', 10077331), ('newjersey', 9288994), ('virginia', 8631393), ('washington', 7693612), ('arizona', 7151502), ('massachusetts', 7029917), ('tennessee', 6910840), ('indiana', 6785528), ('maryland', 6177224), ('missouri', 6154913), ('wisconsin', 5893718), ('colorado', 5773714), ('minnesota', 5706494), ('southcarolina', 5118425), ('alabama', 5024279), ('louisiana', 4657757), ('kentucky', 4505836), ('oregon', 4237256), ('oklahoma', 3959353), ('connecticut', 3605944), ('utah', 3271616), ('iowa', 3190369), ('nevada', 3104614), ('arkansas', 3011524), ('mississippi', 2961279), ('kansas', 2937880), ('newmexico', 2117522), ('nebraska', 1961504), ('idaho', 1839106), ('westvirginia', 1793716), ('hawaii', 1455271), ('newhampshire', 1377529), ('maine', 1362359), ('rhodeisland', 1097379), ('montana', 1084225), ('delaware', 989948), ('southdakota', 886667), ('northdakota', 779094), ('alaska', 733391), ('vermont', 643077), ('wyoming', 576851)]\n"
      ]
     }
    ],
@@ -294,61 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109,302,681\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None,\n",
-       " {'florida',\n",
-       "  'idaho',\n",
-       "  'illinois',\n",
-       "  'indiana',\n",
-       "  'iowa',\n",
-       "  'louisiana',\n",
-       "  'maine',\n",
-       "  'nevada',\n",
-       "  'ohio',\n",
-       "  'pennsylvania',\n",
-       "  'texas'},\n",
-       " 11)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid = [['t', 'a', 'd', 'e', 'a'],\n",
-    "        ['o', 'e', 's', 'i', 'p'],\n",
-    "        ['n', 'i', 'o', 'r', 'e'],\n",
-    "        ['g', 'a', 'l', 's', 't'],\n",
-    "        ['t', 'n', 'v', 'y', 'n']]\n",
-    "\n",
-    "score, states = get_score(grid)\n",
-    "\n",
-    "print(f'{score:,}'), states, len(states)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "154,686,552\n"
+      "154,600,211\n"
      ]
     },
     {
@@ -378,7 +331,7 @@
        " 20)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,105 +357,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'oregon', 'newjersey'} set()\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(states1 - states, states - states1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90,346,622\n",
-      "96,130,930\n",
-      "110,501,555\n",
-      "116,285,863\n",
-      "121,227,355\n",
-      "127,011,663\n",
-      "150,445,008\n",
-      "156,229,316\n",
-      "158,346,882\n",
-      "160,470,860\n",
-      "166,686,493\n",
-      "199,970,598\n",
-      "this is it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid = [['p', 'd', 's', 'm', 'a'],\n",
     "        ['e', 'a', 'i', 'r', 'k'],\n",
     "        ['a', 'n', 'o', 'l', 'a'],\n",
     "        ['t', 'e', 'e', 'r', 's'],\n",
+    "        ['u', 'g', 'w', 'm', 'y']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = [['p', 'd', 's', 'm', 'a'],\n",
+    "        ['e', 'a', 'i', 'r', 'k'],\n",
+    "        ['a', 'n', 'o', 'l', 'a'],\n",
+    "        ['t', 'e', 'r', 'c', 's'],\n",
     "        ['u', 'g', 'w', 'm', 'y']]\n",
     "\n",
-    "row = 3\n",
     "max_score = 0\n",
     "max_grid = None\n",
-    "for a in range(24):\n",
-    "    c1 = chr(ord('a') + a)\n",
-    "    for c2 in range(26):\n",
-    "        c2 = chr(ord('a') + c2)\n",
-    "        for c3 in range(26):\n",
-    "            c3 = chr(ord('a') + c3)\n",
-    "            grid[row] = ['t', c1, c2, c3, 's']\n",
-    "            score, states = get_score(grid)\n",
-    "            \n",
-    "            if score > max_score:\n",
-    "                max_score = score\n",
-    "                max_grid = grid.copy()\n",
-    "                print(f'{score:,}'), states, len(states), c1, c2, c3\n",
-    "                \n",
-    "    if max_score == 199970598:\n",
-    "        print('this is it')\n",
-    "        break"
+    "max_non_cali_grid = None\n",
+    "\n",
+    "test_points = [(0, 0), (4, 3), ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "199970598"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "199,970,598\n"
+      "205,995,695\n"
      ]
     },
     {
@@ -524,17 +418,17 @@
        "  'kansas',\n",
        "  'louisiana',\n",
        "  'maine',\n",
-       "  'montana',\n",
        "  'nevada',\n",
        "  'newyork',\n",
+       "  'northcarolina',\n",
        "  'ohio',\n",
        "  'oregon',\n",
-       "  'texas',\n",
-       "  'utah'},\n",
-       " 22)"
+       "  'texas'},\n",
+       " 21,\n",
+       " {'montana', 'utah'})"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,11 +438,38 @@
     "            ['e', 'a', 'i', 'r', 'k'],\n",
     "            ['a', 'n', 'o', 'l', 'a'],\n",
     "            ['t', 'e', 'r', 'c', 's'],\n",
-    "            ['u', 'g', 'w', 'm', 'y']]\n",
+    "            ['u', 'w', 'g', 'm', 'y']]\n",
     "\n",
-    "score, states = get_score(max_grid)\n",
+    "max_grid = [['p', 'd', 's', 'm', 'a'],\n",
+    "            ['e', 'a', 'i', 'r', 'k'],\n",
+    "            ['a', 'n', 'o', 'l', 'a'],\n",
+    "            ['w', 'e', 'r', 'c', 's'],\n",
+    "            ['u', 't', 'g', 'm', 'y']]\n",
     "\n",
-    "print(f'{score:,}'), states, len(states)"
+    "score, new_states = get_score(max_grid)\n",
+    "diff = states - new_states\n",
+    "states = new_states\n",
+    "\n",
+    "print(f'{score:,}'), states, len(states), diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'newmexico'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "c4 = {'utah', 'nevada', 'newmexico', 'arizona'}\n",
+    "\n",
+    "print(c4 - states)"
    ]
   },
   {
