--- a/altered-states-2/main.ipynb
+++ b/altered-states-2/main.ipynb
@@ -389,22 +389,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "205,995,695\n"
+      "213,271,394\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(None,\n",
-       " {'alabama',\n",
-       "  'alaska',\n",
+       " {'alaska',\n",
        "  'arizona',\n",
        "  'arkansas',\n",
        "  'california',\n",
@@ -419,16 +418,19 @@
        "  'louisiana',\n",
        "  'maine',\n",
        "  'nevada',\n",
+       "  'newmexico',\n",
        "  'newyork',\n",
        "  'northcarolina',\n",
        "  'ohio',\n",
        "  'oregon',\n",
-       "  'texas'},\n",
-       " 21,\n",
-       " {'montana', 'utah'})"
+       "  'tennessee',\n",
+       "  'texas',\n",
+       "  'utah'},\n",
+       " 23,\n",
+       " {'alabama'})"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,14 +439,16 @@
     "max_grid = [['p', 'd', 's', 'm', 'a'],\n",
     "            ['e', 'a', 'i', 'r', 'k'],\n",
     "            ['a', 'n', 'o', 'l', 'a'],\n",
-    "            ['t', 'e', 'r', 'c', 's'],\n",
-    "            ['u', 'w', 'g', 'm', 'y']]\n",
+    "            ['w', 'e', 'r', 'c', 't'],\n",
+    "            ['m', 't', 'g', 'i', 'u']]\n",
     "\n",
-    "max_grid = [['p', 'd', 's', 'm', 'a'],\n",
+    "_, states = get_score(max_grid)\n",
+    "\n",
+    "max_grid = [['d', 's', 's', 'd', 'a'],\n",
     "            ['e', 'a', 'i', 'r', 'k'],\n",
-    "            ['a', 'n', 'o', 'l', 'a'],\n",
-    "            ['w', 'e', 'r', 'c', 's'],\n",
-    "            ['u', 't', 'g', 'm', 'y']]\n",
+    "            ['n', 'n', 'o', 'l', 'a'],\n",
+    "            ['w', 'e', 'r', 'c', 't'],\n",
+    "            ['m', 't', 'g', 'i', 'u']]\n",
     "\n",
     "score, new_states = get_score(max_grid)\n",
     "diff = states - new_states\n",
@@ -455,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'newmexico'}\n"
+      "set()\n"
      ]
     }
    ],
@@ -470,6 +474,26 @@
     "c4 = {'utah', 'nevada', 'newmexico', 'arizona'}\n",
     "\n",
     "print(c4 - states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(states)"
    ]
   },
   {
