--- a/altered-states-2/main.ipynb
+++ b/altered-states-2/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_pops = pd.read_csv('./states_population.csv')\n",
-    "state_pops['NAME'] = state_pops['NAME'].str.lower()\n",
-    "state_pops['NAME'] = state_pops['NAME'].str.replace(' ', '')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,18 +78,21 @@
        "4  california    39538223"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "state_pops = pd.read_csv('./states_population.csv')\n",
+    "state_pops['NAME'] = state_pops['NAME'].str.lower()\n",
+    "state_pops['NAME'] = state_pops['NAME'].str.replace(' ', '')\n",
     "state_pops.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -226,41 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('la', 6), ('li', 4), ('al', 3), ('ol', 3), ('lo', 3), ('yl', 2), ('el', 1), ('fl', 1), ('il', 1), ('ll', 1), ('kl', 1), ('lv', 1), ('sl', 1)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sorted([(k, v) for k, v in double_dict.items() if 'l' in k], key=lambda x: x[1], reverse=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('nia', 4), ('new', 4), ('nne', 3), ('rgi', 3), ('lin', 3), ('ana', 3), ('ota', 3), ('iss', 3), ('sou', 3), ('ala', 2), ('ask', 2), ('ska', 2), ('kan', 2), ('ans', 2), ('nsa', 2), ('sas', 2), ('lor', 2), ('con', 2), ('awa', 2), ('ida', 2), ('aho', 2), ('ian', 2), ('lan', 2), ('and', 2), ('min', 2), ('nes', 2), ('mis', 2), ('ssi', 2), ('mon', 2), ('ont', 2), ('shi', 2), ('wyo', 2), ('nor', 2), ('ort', 2), ('rth', 2), ('thc', 2), ('hca', 2), ('car', 2), ('aro', 2), ('rol', 2), ('oli', 2), ('ina', 2), ('thd', 2), ('hda', 2), ('dak', 2), ('ako', 2), ('kot', 2), ('enn', 2), ('out', 2), ('uth', 2), ('vir', 2), ('irg', 2), ('gin', 2), ('ini', 2), ('ing', 2), ('lab', 1), ('aba', 1), ('bam', 1), ('ama', 1), ('las', 1), ('ari', 1), ('riz', 1), ('izo', 1), ('zon', 1), ('ona', 1), ('ark', 1), ('rka', 1), ('cal', 1), ('ali', 1), ('lif', 1), ('ifo', 1), ('for', 1), ('orn', 1), ('rni', 1), ('col', 1), ('olo', 1), ('ora', 1), ('rad', 1), ('ado', 1), ('onn', 1), ('nec', 1), ('ect', 1), ('cti', 1), ('tic', 1), ('icu', 1), ('cut', 1), ('del', 1), ('ela', 1), ('law', 1), ('war', 1), ('are', 1), ('flo', 1), ('ori', 1), ('rid', 1), ('geo', 1), ('eor', 1), ('org', 1), ('gia', 1), ('haw', 1), ('wai', 1), ('aii', 1), ('dah', 1), ('ill', 1), ('lli', 1), ('ino', 1), ('noi', 1), ('ois', 1), ('ind', 1), ('ndi', 1), ('dia', 1), ('iow', 1), ('owa', 1), ('ken', 1), ('ent', 1), ('ntu', 1), ('tuc', 1), ('uck', 1), ('cky', 1), ('lou', 1), ('oui', 1), ('uis', 1), ('isi', 1), ('sia', 1), ('mai', 1), ('ain', 1), ('ine', 1), ('mar', 1), ('ary', 1), ('ryl', 1), ('yla', 1), ('mas', 1), ('ass', 1), ('ssa', 1), ('sac', 1), ('ach', 1), ('chu', 1), ('hus', 1), ('use', 1), ('set', 1), ('ett', 1), ('tts', 1), ('mic', 1), ('ich', 1), ('chi', 1), ('hig', 1), ('iga', 1), ('gan', 1), ('inn', 1), ('eso', 1), ('sot', 1), ('sis', 1), ('sip', 1), ('ipp', 1), ('ppi', 1), ('sso', 1), ('our', 1), ('uri', 1), ('nta', 1), ('tan', 1), ('neb', 1), ('ebr', 1), ('bra', 1), ('ras', 1), ('nev', 1), ('eva', 1), ('vad', 1), ('ada', 1), ('ewh', 1), ('wha', 1), ('ham', 1), ('amp', 1), ('mps', 1), ('psh', 1), ('hir', 1), ('ire', 1), ('ewj', 1), ('wje', 1), ('jer', 1), ('ers', 1), ('rse', 1), ('sey', 1), ('ewm', 1), ('wme', 1), ('mex', 1), ('exi', 1), ('xic', 1), ('ico', 1), ('ewy', 1), ('yor', 1), ('ork', 1), ('ohi', 1), ('hio', 1), ('okl', 1), ('kla', 1), ('lah', 1), ('hom', 1), ('oma', 1), ('ore', 1), ('reg', 1), ('ego', 1), ('gon', 1), ('pen', 1), ('nns', 1), ('nsy', 1), ('syl', 1), ('ylv', 1), ('lva', 1), ('van', 1), ('ani', 1), ('rho', 1), ('hod', 1), ('ode', 1), ('dei', 1), ('eis', 1), ('isl', 1), ('sla', 1), ('ten', 1), ('ess', 1), ('sse', 1), ('see', 1), ('tex', 1), ('exa', 1), ('xas', 1), ('uta', 1), ('tah', 1), ('ver', 1), ('erm', 1), ('rmo', 1), ('was', 1), ('ash', 1), ('hin', 1), ('ngt', 1), ('gto', 1), ('ton', 1), ('wes', 1), ('est', 1), ('stv', 1), ('tvi', 1), ('wis', 1), ('isc', 1), ('sco', 1), ('ons', 1), ('nsi', 1), ('sin', 1), ('yom', 1), ('omi', 1)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sorted(triple_dict.items(), key=lambda x: x[1], reverse=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -294,83 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "154,600,211\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None,\n",
-       " {'alabama',\n",
-       "  'alaska',\n",
-       "  'arizona',\n",
-       "  'arkansas',\n",
-       "  'florida',\n",
-       "  'georgia',\n",
-       "  'idaho',\n",
-       "  'illinois',\n",
-       "  'indiana',\n",
-       "  'iowa',\n",
-       "  'kansas',\n",
-       "  'louisiana',\n",
-       "  'maine',\n",
-       "  'montana',\n",
-       "  'nevada',\n",
-       "  'newyork',\n",
-       "  'ohio',\n",
-       "  'oregon',\n",
-       "  'texas',\n",
-       "  'utah'},\n",
-       " 20)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid = [['p', 'd', 's', 'm', 'a'],\n",
-    "        ['e', 'a', 'i', 'l', 'k'],\n",
-    "        ['a', 'n', 'o', 'r', 'a'],\n",
-    "        ['t', 'e', 'y', 'r', 's'],\n",
-    "        ['u', 'g', 'w', 'j', 'e']]\n",
-    "        \n",
-    "score1, states1 = get_score(grid)\n",
-    "        \n",
-    "grid = [['p', 'd', 's', 'm', 'a'],\n",
-    "        ['e', 'a', 'i', 'r', 'k'],\n",
-    "        ['a', 'n', 'o', 'l', 'a'],\n",
-    "        ['t', 'e', 'e', 'r', 's'],\n",
-    "        ['u', 'g', 'w', 'm', 'y']]\n",
-    "\n",
-    "score, states = get_score(grid)\n",
-    "print(f'{score:,}'), states, len(states)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = [['p', 'd', 's', 'm', 'a'],\n",
-    "        ['e', 'a', 'i', 'r', 'k'],\n",
-    "        ['a', 'n', 'o', 'l', 'a'],\n",
-    "        ['t', 'e', 'e', 'r', 's'],\n",
-    "        ['u', 'g', 'w', 'm', 'y']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +312,7 @@
        " {'alabama'})"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,17 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c4 = {'utah', 'nevada', 'newmexico', 'arizona'}\n",
     "\n",
@@ -478,20 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(states)"
    ]
